--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-2": "^6.24.1",
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
     "css-loader": "^0.23.1",
